--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
             }
           }
           #userContact{
-            font-weight: 400;
+            font-weight: 500;
+            font-size: 20px;
 
           }
           #userContact:hover{
-            font-weight: 500;
+            font-weight: 700;
             color: blue;
+            cursor: pointer;
             
           }
     </style>
@@ -178,7 +180,7 @@
         <div class="profile-info">
             <h3 id="userName">Alok Prakash</h3>
             <p><strong>Email:</strong> <span id="userEmail"><a href="#">alokprakash.net@gmail.com</a></span></p>
-            <p><strong>Contact No:</strong> <span id="userContact">+91906-583-4810</span></p>
+            <p><strong>Contact No:</strong> <a id="userContact" href="#">+91906-583-4810</a></p>
         </div>
 
         <div class="social-icons">
