--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="social-icons">
             <a href="https://www.instagram.com/technicaltiger2.0/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
             <a href="https://github.com/alokprakash7766" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-            <a href="https://www.linkedin.com/in/alok-kumar-793154230/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/alokkprakash" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://www.youtube.com/@Alokkumar7766" target="_blank"><i class="fa-brands fa-square-youtube"></i></a>
             <a href="https://alokprakash7766.github.io/Alok_portfolio/" target="_blank"><i class="fa-brands fa-dribbble"></i></a>
         </div>
